[gd_scene load_steps=5 format=3 uid="uid://xkkaumhrsqe0"]

[ext_resource type="Script" path="res://SceneItems/Button/button.gd" id="1_r87la"]
[ext_resource type="Material" uid="uid://c158qywkkv1j7" path="res://Shaders/ObjectShader/Material/Mid.tres" id="2_t4nal"]

[sub_resource type="CylinderMesh" id="CylinderMesh_yuir5"]
height = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_bsxub"]
height = 0.5

[node name="Button" type="Node3D"]
script = ExtResource("1_r87la")

[node name="ButtonMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.125, 0)
mesh = SubResource("CylinderMesh_yuir5")
surface_material_override/0 = ExtResource("2_t4nal")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.249756, 0)
shape = SubResource("CylinderShape3D_bsxub")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
